# gl_tutorials

./: .gitignore  CMakeLists.txt
04_deffered/: CMakeLists.txt  main.cpp  myrenderer.hpp  renderer.hpp  ssao.hpp
04_deffered/shaders/: blur.fs.glsl  compositing.fragment.glsl  geometry.fs.glsl  geometry.vs.glsl  lighting.fs.glsl  ssao.fs.glsl
10_deffered_2/: renderer.hpp
data/: data
hw_ssao/: CMakeLists.txt  README.md  main.cpp  myrenderer.hpp  renderer.hpp  shader.h  ssao.hpp
hw_ssao/shaders/: blur.fs.glsl  geometry.fs.glsl  shaders  ssao.fs.glsl
utils/: error_handling.hpp  mesh_object.hpp  ogl_material_factory.hpp  scene_object.hpp
